BUG: Attempt to address navbar height on Safari
See #75

--- a/_sass/workarounds.sass
+++ b/_sass/workarounds.sass
@@ -1,7 +1,19 @@
 // ================================
 // Workaround navbar issue on Safari
 // See https://github.com/Slicer/slicer.org/issues/75
-.navbar
+//.navbar
+//  height: $navbar-height
+//  & > .container
+//    height: $navbar-height
+.navbar-brand,
+.navbar-tabs
   height: $navbar-height
-  & > .container
-    height: $navbar-height
+//.navbar-item
+//  &.is-tab
+//    height: $navbar-height
+//+from($navbar-breakpoint)
+//  .navbar
+//    height: $navbar-height
+//.hero
+//  &.is-fullheight-with-navbar
+//    height: calc(100vh - #{$navbar-height})*/
